# XLCImgStitcher

./: CMakeLists.txt  HSVTracker.cpp  README.md
include/: MainWindow.h
src/: MainWindow.cpp  main.cpp
